Inlined localhost as the frontend host in CORS policy.